Added Controllers for a cleaner code

--- a/learning express/public/css/style.css
+++ b/learning express/public/css/style.css
@@ -45,8 +45,13 @@ button {
     height: 30px;
     padding: 0 5px;
     background-color: darkslategray;
+    color:aliceblue;
     border-radius: 5px;
     border-style: none;
     margin-top: 15px;
     cursor: pointer;
+}
+#call{
+    margin-bottom: 5vh;
+    color: darkslategray;
 }
